# feather

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CICD_SETUP_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  Dockerfile  HOW_TO_USE.md  LOCAL_TESTING_GUIDE.md  LOCAL_TEST_RESULTS.md  MANIFEST.in  PHASE2_GUIDE.md  PHASE3_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_SUMMARY.md  USAGE_GUIDE.md  deploy_to_pypi.sh  deploy_v2.sh  feather-cli-v3  publish_rust_cli.sh  pyproject.toml  setup.py  setup_cicd.sh  test  test.cpp  test_auto_compact.py  test_batch_ingest.py  test_complete.py  test_int8_ram.py  test_local.sh  test_parallel_load.py  test_persist_graph.py  test_prefiltered_search.py  test_quantization.py  test_secondary_index.py
.github/workflows/: publish-pypi.yml  publish-rust.yml  release.yml  test.yml  wheels.yml
bench/: README.md  __init__.py  __main__.py  embedders.py  embedders_openai.py  judges.py  judges_llm.py  metrics.py  providers_azure.py  report.py  runner.py
bench/datasets/: __init__.py  longmemeval.py  sift.py  synthetic.py
bench/reports/: latest.md
bench/results/: longmemeval__oracle__20260425_180727.json  longmemeval__oracle__20260425_180834.json  longmemeval__oracle__20260425_181822.json  longmemeval__oracle__20260425_183426.json  longmemeval__oracle__20260425_183732.json  longmemeval__oracle__20260425_183945.json  longmemeval__oracle__20260425_184212.json  longmemeval__oracle__20260425_191618.json  longmemeval__oracle__20260425_191858.json  longmemeval__oracle__20260425_200131.json  longmemeval__oracle__20260425_200250.json  longmemeval__s__20260426_025723.json  longmemeval__s__20260426_110536.json  vector_ann__synthetic__20260425_013539.json  vector_ann__synthetic__20260425_013625.json  vector_ann__synthetic__20260425_013634.json  vector_ann__synthetic__20260425_022624.json  vector_ann__synthetic__20260425_022628.json  vector_ann__synthetic__20260425_022638.json  vector_ann__synthetic__20260425_024121.json  vector_ann_real__sift1m__20260425_154057.json  vector_ann_real__siftsmall__20260425_153423.json
bench/scenarios/: __init__.py  longmemeval.py  longmemeval_phase9.py  vector_ann.py  vector_ann_real.py
benchmarks/: LONGMEMEVAL_RESULTS.md  longmemeval.py  longmemeval_qa.py  phase3_benchmark.py  stress_test.py
bindings/: feather.cpp
docs/: CONTENT_INDEX.json  arxiv_style.css  bulk-operations.md  deploy-azure.md  dimensions.md  feather-state-of-the-product.md  featherdb_arxiv.html  featherdb_business_diagram.html  featherdb_diagram.html  featherdb_mathml.html  featherdb_paper.tex  glean-research.md  integrations.md  quickstart.md  research_paper.md  whitepaper.md
docs/architecture/: context-building-pipeline.md  phase9-plan.md
docs/arxiv-submission/: SUBMISSION_GUIDE.md
docs/benchmarks/: longmemeval.md
docs/blog/: longmemeval-publish.md  longmemeval-results.md
docs/marketing/: gtm-plan.md  hn-submission.md  twitter-thread.md
docs/research/: inference-backend-recommendation.md  mcp-server-design.md  multimodal-embedder-recommendation.md  tool-use-schemas.md
examples/: advanced_knowledge_demo.py  agent_connectors_demo.py  api_test_ui.py  azure_full_test.py  azure_test_report.md  basic_python_example.py  batch_processing_example.py  bm25_hybrid_search_demo.py  cars24_agent.py  connector_quickstart.py  context_engine_demo.py  context_graph_demo.py  feather_agent_tools.py  feather_dashboard.py  feather_inspector.py  living_context_engine_demo.py  marketing_ads_dataset.py  marketing_living_context.py  marketing_multimodal_demo.py  marketing_os_simulation.py  phase3_verify.py  real_data_time_series_demo.py  real_meta_ads_ingest.py  real_meta_context_multimodal.py  semantic_search_example.py  stable_money_intel_demo.py
experiments/gemini_cross_modal/: README.md  blog.md  embedder.py  experiment.py  generate_content.py
experiments/gemini_cross_modal/results/: case_study.md  experiment_results.json  technical_paper.md
feather/: __init__.py
feather-api/: Dockerfile  Dockerfile.dashboard  dashboard.py  docker-compose.yml
feather-api/app/: db_manager.py  embedding.py  main.py  metrics.py  models.py
feather-api/deploy/: fly.toml  railway.json  render.yaml
feather-api/static/admin/: index.html
feather-cli/: Cargo.toml  README.md  build.rs  main.rs
feather-cli/cpp/include/: feather.h  hnswalg.h  metadata.h
feather-cli/cpp/src/: metadata.cpp
feather-cli/src/: build.rs  lib.rs  main.rs
feather_db/: __init__.py  domain_profiles.py  engine.py  episodes.py  filter.py  graph.py  hierarchy.py  memory.py  merge.py  plotly_viz.py  providers.py  triggers.py
feather_db/extractors/: __init__.py  _jsonparse.py  base.py  contradictions.py  entities.py  facts.py  ontology.py  temporal.py
feather_db/feedback/: __init__.py  decay.py  events.py  log.py
feather_db/integrations/: __init__.py  base.py  claude.py  embedders.py  gemini.py  langchain_compat.py  llamaindex_compat.py  llm.py  mcp_remote.py  mcp_server.py  openai_compat.py
feather_db/pipelines/: __init__.py  ingest.py
feather_db/reason/: __init__.py  executor.py  planner.py
hf-space/: README.md  app.py  requirements.txt
include/: feather.h  filter.h  hnswalg.h  metadata.h  scoring.h  space_l2.h
p-test/: QUICK_REFERENCE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  architecture-diagram.md  complete-rust-cli-guide.md  run_tests.sh  rust-cli-analysis.md  test-sequence.md  test_rust_cli.py
p-test/test-data/: query.npy  vector1.npy  vector2.npy  vector3.npy
src/: feather_core.cpp  metadata.cpp
tests/: conftest.py  test_bm25_hybrid.py  test_core.py  test_engine.py  test_extractors_contradictions.py  test_extractors_facts_entities.py  test_extractors_ontology.py  test_extractors_temporal.py  test_feedback.py  test_filter.py  test_graph.py  test_hierarchy.py  test_mcp_phase9.py  test_memory.py  test_phase9_smoke.py  test_pipelines_ingest.py  test_pipelines_phase2.py  test_reason.py  test_recall.py
units/: units_init.py
