[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feather-db"
version = "0.5.0"
description = "Embedded vector database + living context engine — multimodal pockets, context graph, adaptive decay"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hawky.ai Team", email = "hello@hawky.ai"}
]
keywords = [
    "vector", "database", "similarity", "search", "embeddings",
    "hnsw", "ann", "nearest-neighbor", "context-graph",
    "knowledge-graph", "living-context", "multimodal", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]
examples = [
    "sentence-transformers>=2.0",
]

[project.urls]
Homepage = "https://www.getfeather.store/"
Documentation = "https://github.com/feather-store/feather/blob/main/README.md"
Repository = "https://github.com/feather-store/feather"
Issues = "https://github.com/feather-store/feather/issues"
Changelog = "https://github.com/feather-store/feather/blob/main/CHANGELOG.md"
"Hawky.ai" = "https://hawky.ai"

[tool.setuptools]
packages = ["feather_db"]

[tool.setuptools.package-data]
"feather_db" = ["*.so", "*.pyd", "*.dll", "d3.min.js"]
