[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feather-db"
version = "0.16.0"
description = "Embedded vector database + living context engine — multimodal pockets, context graph, adaptive decay, MCP server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hawky.ai Team", email = "hello@hawky.ai"}
]
keywords = [
    "vector", "database", "similarity", "search", "embeddings",
    "hnsw", "ann", "nearest-neighbor", "context-graph",
    "knowledge-graph", "living-context", "multimodal", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]
examples = [
    "sentence-transformers>=2.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
llamaindex = [
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
]
mcp = [
    "mcp>=0.9.0",
]
all = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "mcp>=0.9.0",
    "google-genai>=1.0.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
]

[project.scripts]
feather-serve = "feather_db.integrations.mcp_server:main"

[project.urls]
Homepage = "https://www.getfeather.store/"
Documentation = "https://github.com/feather-store/feather/blob/main/README.md"
Repository = "https://github.com/feather-store/feather"
Issues = "https://github.com/feather-store/feather/issues"
Changelog = "https://github.com/feather-store/feather/blob/main/CHANGELOG.md"
"Hawky.ai" = "https://hawky.ai"

# Auto-discover every subpackage (extractors/feedback/pipelines/reason/
# integrations). The previous hardcoded list silently dropped the Phase 9.1
# subpackages added after 0.8.0 from the wheel/sdist.
[tool.setuptools.packages.find]
include = ["feather_db*"]

# Only ship real data files. The compiled extension (feather_db.core) is added
# to the wheel automatically via ext_modules; listing *.so as package-data also
# dragged a host-specific binary into the sdist.
[tool.setuptools.package-data]
"feather_db" = ["d3.min.js"]
