[package]
name = "feather-db-cli"
version = "0.2.1"
edition = "2021"
authors = ["Hawky.ai Team <hello@hawky.ai>"]
description = "Command-line interface for Feather context-aware vector database - Part of Hawky.ai"
license = "MIT"
repository = "https://github.com/feather-store/feather"
homepage = "https://www.getfeather.store/"
documentation = "https://github.com/feather-store/feather/blob/main/README.md"
readme = "../README.md"
keywords = ["vector", "database", "similarity", "cli", "hnsw"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "feather"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ndarray = "0.15"
ndarray-npy = "0.8"

[build-dependencies]
cc = "1.0"
